# estacao

./: .gitignore  CMakeLists.txt  config.h  debug.c  debug.h  humidade.c  humidade.h  main.c  mqtt.c  mqtt.h  pressao.c  pressao.h  temperatura.c  temperatura.h  umidade.c  umidade.h  vento.c  vento.h
doc/: estacao.tex
